--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Jayanth's personal site</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <img height="25%" width="10%" src="DSC_0524-modified.png" size="25%" alt="Jayanth's image " >
     <h1> <a href="https://www.instagram.com/jayanth_soldier/">JAYANTH M N</a> </h1>
     <P><em>Editing photos and videos</em></P>
-    <p>I am a web devloper . I love coffee</p>
+    <p>I am a web devloper </p>
     <hr>
     <h3>photos and videos</h3>
     <ul>
